fixed listPage z-index

--- a/SATravelWebSystem/static/css/main.css
+++ b/SATravelWebSystem/static/css/main.css
@@ -110,6 +110,7 @@ body {
     height: auto;
     top: 100px;
     left: 10%;
+    z-index: -3;
 }
 .intro {
     position: relative;
@@ -136,7 +137,6 @@ body {
     text-align: left;
     z-index: 4;
     margin-bottom: 2%;
-    z-index: -100;
 }
 #rank {
     list-style: none;
